Got tests running using doo